<resources>
    <string name="app_name">Курс2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_Button">Поиск страны</string>
    <string name="country">TextView</string>
    <string name="capital_of_the_country">Столица:</string>
    <string name="capital_name">TextView</string>
    <string name="population_of_the_country">Население:</string>
    <string name="population">TextView</string>
    <string name="area_of_the_country">Площадь:</string>
    <string name="language_of_the_country">Языки:</string>
    <string name="area">TextView</string>
    <string name="languages">TextView</string>
    <string name="search_country">Поиск стран</string>
    <string name="list_country">Список стран</string>
    <string name="name_for_search">Название</string>
    <string name="subregion_of_the_country">Субрегион:</string>
    <string name="subregion">TextView</string>
    <string name="currencies_of_the_country">Валюта:</string>
    <string name="currencies">TextView</string>
    <string name="name_of_the_country">Название страны:</string>
    <string name="the_country">TextView</string>
    <string name="region">Регион:</string>
    <string name="region_of_the_country">TextView</string>
    <string name="continents">Континент(ы):</string>
    <string name="continents_of_the_country">TextView</string>
    <string name="car">Знаки машин и сторона передвижения:</string>
    <string name="aboutCars">TextView</string>
    <string name="official">Официальное название страны:</string>
    <string name="official_name">TextView</string>
    <string name="dash"> - </string>
    <string name="officialNameEng">TextView</string>
    <string name="comma"> , </string>
    <string name="side">TextView</string>
    <string name="squared">км²</string>
    <string name="art_search_button">Поиск картины</string>
    <string name="art_list_button">Список картин</string>
    <string name="name_art">Название картины:</string>
    <string name="title_of_the_art">TextView</string>
    <string name="about_creator">О художнике:</string>
    <string name="creator">TextView</string>
    <string name="style_title">Стиль картины:</string>
    <string name="style">TextView</string>
    <string name="title">TextView</string>
    <string name="year_the_painting">Год создания картины:</string>
    <string name="errorMessage">Нет подключение к интернету. Проверьте соединение.</string>
    <string name="errorMessageInList">Для загрузки подключитесь к интернету.</string>
    <string name="partialDataError">Отсутствует интернет соединение.</string>
</resources>