<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ArtDetailsFragment"
    android:background="@color/white">

    <ImageView
        android:id="@+id/ivBackToParentFragment"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivArt"
        android:layout_width="390dp"
        android:layout_height="390dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/baseline_image_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBackToParentFragment" />

    <TextView
        android:id="@+id/titleOfTheArt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_art"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivArt" />

    <TextView
        android:id="@+id/tvArtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/title_of_the_art"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/titleOfTheArt"
        app:layout_constraintTop_toBottomOf="@+id/ivArt"/>

    <TextView
        android:id="@+id/tvArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/about_creator"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvArtName" />

    <TextView
        android:id="@+id/tvAboutArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/creator"
        app:layout_constraintStart_toEndOf="@+id/tvArtist"
        app:layout_constraintTop_toBottomOf="@+id/tvArtName" />

    <TextView
        android:id="@+id/tvStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/style_title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAboutArtist" />

    <TextView
        android:id="@+id/tvStyleArt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/style"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@+id/tvStyle"
        app:layout_constraintTop_toBottomOf="@+id/tvAboutArtist" />

    <TextView
        android:id="@+id/tvYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year_the_painting"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStyleArt" />

    <TextView
        android:id="@+id/tvYearTheCreation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/title"
        app:layout_constraintStart_toEndOf="@+id/tvYear"
        app:layout_constraintTop_toBottomOf="@+id/tvStyleArt" />


</androidx.constraintlayout.widget.ConstraintLayout>